# intrascan

./: .gitignore  README.md  pyproject.toml
docs/: configuration.md  how-it-works.md  templates.md
intrascan/: cli.py  executor.py  output.py
nuclei_frida/: cli.py  request_builder.py
tests/: __init__.py  conftest.py  test_executor.py  test_extractors.py  test_frida_client.py  test_frida_response.py  test_integration.py  test_matchers.py  test_request_builder.py  test_template_discovery.py  test_template_parser.py  test_variables.py
